--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -18,10 +18,10 @@ jobs:
       run: make
       
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: MyFramework.xcframework
-        path: _install
+        path: _install/MyFramework.xcframework
 
     - name: Cleanup
       run: make clean
