--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: MyFramework.xcframework
-        path: _install
+        path: _install/MyFramework.xcframework
 
     - name: Cleanup
       run: make clean
